static/sass/base.sass
@import './variables'


html,
body
  height: 100%

body
  background: $color-white
  display: flex
  flex-direction: column
  font-family: $font-family-body
  font-size: $font-size-body
  line-height: $line-height-body
  margin: 0

main
  display: block
  flex: 1 0 auto

footer
  flex: 0 0 0

h1
  font-size: $font-size-heading
  font-weight: $font-weight-normal
  line-height: $line-height-title
  margin: 0 0 30px
  padding: 0 20px

h2
  font-size: $font-size-subheading
  font-weight: $font-weight-normal
  line-height: $line-height-title
  margin: 0 0 20px
  padding: 0 20px

h3
  font-size: $font-size-subheading
  font-weight: $font-weight-normal
  line-height: $line-height-title
  margin: 40px 0 20px
  padding: 0

h4
  font-size: $font-size-body
  line-height: $line-height-title
  margin: 0 0 20px

p
  margin: 0 0 20px
  padding: 0 30px

a
  color: $color-red
  text-decoration: none
  transition-duration: $transition-duration-short
  transition-property: color

  &:hover
    color: $color-black

.screen-reader
  height: 1px
  left: -100%
  overflow: hidden
  position: absolute
  top: auto
  width: 1px

